<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_date_label">Date?</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="starttime_label">Start time?</string>
    <string name="newevent_date_first">01-01-2017</string>
    <string name="starttime_first">10:00</string>
    <string name="newevent_hint">Event Name?</string>
    <string name="register_button">REGIGSTER</string>
    <string name="refresh_lists">REFRESH LISTS</string>
    <string name="endtime_label">End time?</string>
    <string name="endtime_first">11:00</string>
    <string name="addevent_button">ADD EVENT</string>
    <string name="PlantTree">Plant Tree</string>
    <string name="CutTree">Cut Tree</string>
    <string name="ListTrees">List Trees</string>


    <string name="treespecies">Tree Species</string>
    <string name="treemunicipality">Tree Municipality</string>
    <string name="treelongitude">Tree Longitude</string>
    <string name="treelatitude">Tree Latitude</string>
    <string name="plant"> Plant!</string>
    <string name="cancel"> Cancel</string>
    <string name="ownername">Owner Name</string>
    <string name="treeid">Enter Tree ID</string>
    <string name="cut">Request Cut!</string>


</resources>

